--- a/src/Report.css
+++ b/src/Report.css
@@ -36,3 +36,10 @@
     margin-left: 390px;
     margin-top: -200px;
 }
+.but1{
+    margin-left: 400px;
+    width: 150px;
+    margin-top: 10px;
+    height: 20px;
+
+}
